--- a/themes/dot-hugo/layouts/partials/essentials/head.html
+++ b/themes/dot-hugo/layouts/partials/essentials/head.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8" />
-<title>{{ .Title | default site.Title }}</title>
+<title>Hyresfel</title>
 
 <!-- responsive meta -->
 <meta
